# Autonomous-Cognitive-Engine-for-Deep-Research-and-Long-Horizon-Tasks

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
artifacts/: summary.md
artifacts/task_t1/: answer.md  chunks.jsonl
artifacts/task_t2/: answer.md  chunks.jsonl
artifacts/task_t3/: answer.md  chunks.jsonl
artifacts/task_t4/: answer.md  chunks.jsonl
audit/: episodes.jsonl  state.json
data/: memory.db  stm.json
docs/decisions/: adr-0001-initial-architecture.md
examples/: run_minimal_agent.py
src/ace/: __init__.py  cli.py  logging_config.py
src/ace/core/: __init__.py  agent.py  memory.py  memory_store.py  memory_system.py  models.py  planner.py  queue.py  reasoner.py  reflector.py  state_machine.py  stop.py  tool_schemas.py  tools.py
src/ace/core/quality/: models.py  monitor.py  reflector.py
src/ace/core/rag/: fusion.py  models.py  pipeline.py  retrievers.py
src/ace/core/reasoning/: action_schema.py  reasoner_interface.py  rule_reasoner.py  safety.py
src/ace/core/tools/: __init__.py  base.py  file_writer.py  python_runner.py  registry.py  tool_executor.py  web_search.py
tests/: test_smoke.py
ui/: README.md
